--- a/Samuel/Samuel.csproj
+++ b/Samuel/Samuel.csproj
@@ -5,7 +5,12 @@
     <StartupObject>Samuel.Program</StartupObject>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <RestoreSources>$(RestoreSources);./lib;https://api.nuget.org/v3/index.json</RestoreSources>
+  </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="Chabis.Functional" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NUnit" Version="3.12.0" />
